Update controllers and Swagger docs
